--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -99,6 +99,27 @@
     gap: 1rem;
   }
   
+  .cart-icon-link {
+  position: relative;
+  display: inline-block;
+}
+
+.cart-badge {
+  position: absolute;
+  top: -10px;
+  right: -20px;
+  background: #d52323;
+  color: #fff;
+  font-size: 0.8rem;
+  font-weight: 400;
+  padding: 0.16rem;
+  border-radius: 999px;
+  border: 1px solid #222;
+  min-width: 22px;
+  text-align: center;
+  pointer-events: none;
+  z-index: 2;
+}
   /* Responsive */
   @media (max-width: 768px) {
     .main-header {
